# Crypt

./: .env.example  .gitattributes  .gitignore  Anchor.toml  LICENSE  README.md  index.html  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: display.rs  main.rs  scanner.rs  scoring.rs  soul.rs  verify.rs
docs/: architecture.mermaid  data-flow.mermaid  tech-stack.mermaid  user-flow.mermaid
indexer/: Cargo.toml
indexer/src/: events.rs  main.rs  processor.rs  store.rs  watcher.rs
programs/: Cargo.toml
programs/crypt/: Cargo.toml
programs/crypt/src/: lib.rs
programs/crypt/src/analytics/: metrics.rs  mod.rs  patterns.rs  wallet_profile.rs
programs/crypt/src/errors/: mod.rs
programs/crypt/src/instructions/: burn.rs  collection.rs  mint.rs  mod.rs  social.rs  transfer.rs  upgrade.rs  verify.rs
programs/crypt/src/state/: card.rs  collection.rs  interaction.rs  mod.rs
programs/crypt/src/utils/: hashing.rs  mod.rs  scoring.rs  validation.rs
sdk/: Cargo.toml
sdk/src/: client.rs  error.rs  lib.rs  scoring.rs  soul.rs  types.rs
src/: App.jsx  Graveyard.jsx  MintCeremony.jsx  SoulSignature.jsx  audius.js  components.jsx  config.js  helius.js  index.css  mint.js  narration.js  tapestry.js  theme.js  useAudioPlayer.js  wallet.js
tests/: Cargo.toml
tests/src/: helpers.rs  main.rs  test_burn.rs  test_collection.rs  test_mint.rs  test_scoring.rs  test_social.rs  test_soul.rs  test_transfer.rs  test_upgrade.rs  test_verify.rs
