[package]
name = "crypt-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Crypt — scan wallets, verify cards, generate soul signatures"
authors = ["BigSiggis <bigsiggis@gmail.com>"]
repository = "https://github.com/BigSiggis/Crypt"

[[bin]]
name = "crypt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18"
solana-client = "1.18"
colored = "2"
indicatif = "0.17"
