[package]
name = "crypt-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for interacting with the Crypt Solana program"
authors = ["BigSiggis <bigsiggis@gmail.com>"]
repository = "https://github.com/BigSiggis/Crypt"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
anchor-lang = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bs58 = "0.5"
thiserror = "1"
