[package]
name = "crypt-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for the Crypt Solana program"

[dependencies]
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
solana-sdk = "1.18"
solana-program-test = "1.18"
solana-program = "1.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
bs58 = "0.5"
